--- a/enterprise-archunit-example-usage/pom.xml
+++ b/enterprise-archunit-example-usage/pom.xml
@@ -1,6 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <dependencies>
+        <dependency>
+            <groupId>pl.klolo</groupId>
+            <artifactId>enterprise-archunit-ruleset-api</artifactId>
+            <version>0.0.1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <parent>
         <groupId>pl.klolo</groupId>
@@ -23,11 +31,6 @@
             <plugin>
                 <groupId>pl.klolo</groupId>
                 <artifactId>enterprise-archunit-mojo</artifactId>
-                <configuration>
-                    <ruleSet>
-                        <param>pl.klolo.archtests.example.rules.DomainModuleTestsRuleSet</param>
-                    </ruleSet>
-                </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>pl.klolo</groupId>
